Gpencil: GPv3 interpolation sets wrong material on new keyframe #125922

Closed
opened 2024-08-05 21:09:30 +02:00 by Aleš Jelovčan · 10 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.32

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-05 18:20, hash: 79ad6a3148c8
Worked: /

Short description of error
When using interpolation tool in edit mode, strokes on newly created interpolation frame have wrong material

Exact steps for others to reproduce the error
Open file attached, use interpolation tool

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.32 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-05 18:20, hash: `79ad6a3148c8` Worked: / **Short description of error** When using interpolation tool in edit mode, strokes on newly created interpolation frame have wrong material **Exact steps for others to reproduce the error** Open file attached, use interpolation tool
Aleš Jelovčan added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-08-05 21:09:31 +02:00
Lukas Tönne self-assigned this 2024-08-06 09:14:31 +02:00
Member

Can confirm

Can confirm
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-08-06 10:33:20 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-08 11:30:11 +02:00
Author
Member

This is still problematic. File attached. Interpolation tool is already selected so just try creating new frame with it.

This is still problematic. File attached. Interpolation tool is already selected so just try creating new frame with it.
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2024-08-23 12:23:36 +02:00
Member

Notes to self:

  1. Interpolate seems to discard/skip points:
    image
  2. Making all curves non-cyclic (edit mode, select all, alt+c twice) and then interpolating crashes on length calculation.
Notes to self: 1. Interpolate seems to discard/skip points: <img width="543" alt="image" src="attachments/1f5c2808-b94a-4fbb-abf2-edaaea2df583"> 2. Making all curves non-cyclic (edit mode, select all, alt+c twice) and then interpolating crashes on length calculation.
150 KiB
Member

Can confirm. Looking at the commit, now active material is set to the new drawing.

Can confirm. Looking at the commit, now active material is set to the new drawing.
Pratik Borhade added
Status
Confirmed
Type
Bug
and removed
Status
Needs Triage
Type
Report
labels 2024-08-27 09:06:02 +02:00
Member

Maybe we can slice and copy material_index attribute array to new drawing, no?

Maybe we can slice and copy `material_index` attribute array to new drawing, no?
Member

Got this working, I'll make PR 😅

Got this working, I'll make PR 😅
Member

@frogstomp hi, !126832 will resolve this, can you check if it works locally in other grease pencil files?

@frogstomp hi, !126832 will resolve this, can you check if it works locally in other grease pencil files?
Author
Member

@PratikPB2123 sure, testing

@PratikPB2123 sure, testing
Author
Member

@PratikPB2123 the patch is ok. handles materials right -> takes the material from previous frame.
commit and close please :)
edit: after further testing, found crash when there is no target frame (anything right of the current frame)

@PratikPB2123 the patch is ok. handles materials right -> takes the material from previous frame. commit and close please :) edit: after further testing, found crash when there is no target frame (anything right of the current frame)
Member

Thanks @frogstomp , fixed the crash.

Thanks @frogstomp , fixed the crash.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-10 17:53:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125922
No description provided.