Fix #125922: Interpolation tool should use active material

This was just copying the existing material, should use the active
brush.

Pull Request: https://projects.blender.org/blender/blender/pulls/126046